--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>A Letter Just for You ❤️</title>
+
   <style>
-    * { box-sizing: border-box; }
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
       min-height: 100vh;
@@ -13,72 +17,101 @@
       align-items: center;
       justify-content: center;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #ffdde1, #ee9ca7);
+      background: linear-gradient(135deg, #ffc1cc, #ff9a9e); /* PINK BACKGROUND */
     }
+
     .card {
-      background: white;
+      background: pink;
       width: 90%;
       max-width: 520px;
       padding: 28px 26px 32px;
       border-radius: 18px;
-      box-shadow: 0 20px 40px rgba(0,0,0,0.15);
+      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.15);
       text-align: center;
       animation: fadeIn 1.2s ease;
     }
+
     h1 {
       margin-top: 0;
       color: #e63946;
       font-size: 2rem;
     }
+
     .heart {
       font-size: 2.2rem;
       animation: pulse 1.4s infinite;
     }
+
     p {
       color: #333;
       font-size: 1.05rem;
       line-height: 1.7;
       margin: 16px 0;
     }
+
     .from {
       margin-top: 24px;
       font-weight: 600;
       color: #555;
     }
+
     footer {
       margin-top: 22px;
       font-size: 0.85rem;
       color: #888;
     }
+
     @keyframes pulse {
       0% { transform: scale(1); }
       50% { transform: scale(1.15); }
       100% { transform: scale(1); }
     }
+
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
+
 <body>
   <div class="card">
     <div class="heart">❤️</div>
-    <h1>Hey You</h1>
+
+    <h1>Hello Cutuu</h1>
+
     <p>
-      If you’re reading this, it means you scanned the QR… and that already
-      makes me smile. I just wanted you to know that you matter a lot to me.
+      Soo… agar tum yeh padh paa rahe ho, toh iska matlab tumne mera QR scan kar liya hai 🥹  
+      Pehle toh — <strong>HAPPY VALENTINE’S DAY CUTUU 💞💞</strong>
     </p>
+
     <p>
-      Your presence makes ordinary days feel special, and somehow everything
-      feels lighter when you’re around. This little website is my small way of
-      saying what I don’t always say out loud.
+      12th September 2025 meri life ka woh din hai jab maine sabse best decision liya.
+      Tum meri life mein sabse zyada matter karti ho, aur main tumhe itna pyaar karta hoon
+      jitna shayad words kabhi explain hi na kar paayein.
     </p>
+
     <p>
-      Keep smiling. Don’t ever forget how amazing you are.
+      Cutuu, tum meri life ka woh hissa ho jo bina kuch kahe bhi sab kuch samajh leti ho.
+      Tumhari smile meri boring si day ko bhi special bana deti hai, aur tumhari baatein
+      mere mind mein baar-baar repeat hoti rehti hain.
+      Tum saath ho toh sab kuch thoda easy lagta hai, thoda better lagta hai.
     </p>
-    <div class="from">— From someone who cares 💫</div>
-    <footer>Made with ❤️ just for you</footer>
+
+    <p>
+      Main perfect nahi hoon, but tumhare saath rehkar better banna chahta hoon.
+      Bas itna hi kehna hai ki tum meri duniya ka woh reason ho jiske liye main har din
+      grateful feel karta hoon 💫❤️  
+      <strong>I LOVEEEE YOUUUUUU CUTUUUU 💞💞💞💓</strong>
+    </p>
+
+    <p>
+      Aur haan… main kahin nahi jaa raha.  
+      <strong>HAMESHA TUMHARE SAATH HOON MAIN ❤️</strong>
+    </p>
+
+    <div class="from">— From ADI</div>
+    <footer>Made with ❤️ just for my cutuu</footer>
   </div>
 </body>
 </html>
